--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/lato": "^4.5.10",
     "@fontsource/open-sans": "^4.5.12",
     "@fontsource/oswald": "^4.5.11",
+    "@fontsource/sora": "^4.5.10",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
